--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <div id="menu">
         <h1>Snake Multijoueur</h1>
         <input type="text" id="roomCode" placeholder="Code de la partie">
-        <button id="joinBtn">Rejoindre la partie</button>
-        <p id="waiting"></p>
+        <button id="startButton">Rejoindre la partie</button>
+        <p id="status"></p>
     </div>
 
     <canvas id="gameCanvas" width="800" height="800" style="display:none;"></canvas>
