--- a/sae2.03/equipe.html
+++ b/sae2.03/equipe.html
@@ -48,6 +48,10 @@
 		</section>
 	</main>
 
+	<footer>
+		<p>&copy; 2025 Projet SAE 2.03 – Tous droits réservés</p>
+	</footer>
+
 	<script src="js/script.js"></script>
 </body>
 
