--- a/sae2.03/index.html
+++ b/sae2.03/index.html
@@ -26,16 +26,16 @@
 	<main>
 		<section class="content-section">
 			<!-- … */}
-    </section>
-  </main>
+		</section>
+	</main>
 
-  <!-- 4) Footer identique -->
-			<footer>
-				<p>&copy; 2025 Projet SAE 2.03 – Tous droits réservés</p>
-			</footer>
+	<!- 4) Footer identique -->
+	<footer>
+		<p>&copy; 2025 Projet SAE 2.03 – Tous droits réservés</p>
+	</footer>
 
-			<!-- 5) Toujours en dernier -->
-			<script src="js/script.js"></script>
+	<!-- 5) Toujours en dernier -->
+	<script src="js/script.js"></script>
 </body>
 
 </html>
