--- a/sae2.03/deploiement.html
+++ b/sae2.03/deploiement.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF‑8">
 	<meta name="viewport" content="width=device‑width,initial‑scale=1.0">
-	<title>Fonctionnement côté Client (snake.js + index.html)</title>
+	<title>Déploiement et Fonctionnement Docker</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -30,7 +30,7 @@
 		</section>
 	</main>
 
-  <!-- 4) Footer identique -->
+	<!-- 4) Footer identique -->
 	<footer>
 		<p>&copy; 2025 Projet SAE 2.03 – Tous droits réservés</p>
 	</footer>
