--- a/sae2.03/equipe.html
+++ b/sae2.03/equipe.html
@@ -12,10 +12,11 @@
 
 	<nav class="glass-nav">
 		<ul>
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="technique.html">Choix Techniques</a></li>
-			<li><a href="installation.html">Installation</a></li>
-			<li><a href="equipe.html">Équipe</a></li>
+			<li><a href="index.html">Présentation générale</a></li>
+			<li><a href="serveur.html">Fonctionnement côté Serveur (server.js)</a></li>
+			<li><a href="client.html">Fonctionnement côté Client (snake.js + index.html)</a></li>
+			<li><a href="deploiement.html">Déploiement et Fonctionnement Docker</a></li>
+			<li><a href="equipe.html">Notre équipe</a></li>
 		</ul>
 	</nav>
 	
@@ -23,30 +24,47 @@
 		<section class="content-section">
 			<div class="card">
 				<h2>👥 Notre Équipe</h2>
-
-				<div class="team-member">
-					<img src="media/avatar1.jpg" alt="Membre 1">
-					<h3>John Doe</h3>
-					<p>Développeur Backend</p>
+				<div class="team-list">
+					<!-- Membre 1 -->
+					<div class="team-member">
+						<span class="member-tag">Membre 1</span>
+						<div class="member-info">
+							<h3>Franceschetto Théo</h3>
+							<p>Code JavaScript</p>
+						</div>
+					</div>
+	
+					<!-- Membre 2 -->
+					<div class="team-member">
+						<span class="member-tag">Membre 2</span>
+						<div class="member-info">
+							<h3>Grangeon Alan</h3>
+							<p>Code JavaScript</p>
+						</div>
+					</div>
+	
+					<!-- Membre 3 -->
+					<div class="team-member">
+						<span class="member-tag">Membre 3</span>
+						<div class="member-info">
+							<h3>Gricourt Paul</h3>
+							<p>Site Internet</p>
+						</div>
+					</div>
+	
+					<!-- Membre 4 -->
+					<div class="team-member">
+						<span class="member-tag">Membre 4</span>
+						<div class="member-info">
+							<h3>Joigneau Arsène</h3>
+							<p>Site Internet</p>
+						</div>
+					</div>
 				</div>
-
-				<div class="team-member">
-					<img src="media/avatar2.jpg" alt="Membre 2">
-					<h3>Jane Smith</h3>
-					<p>Développeuse Frontend</p>
-				</div>
-			</div>
-
-			<div class="card">
-				<h2>📞 Contact</h2>
-				<form class="contact-form">
-					<input type="email" placeholder="Votre email">
-					<textarea placeholder="Message..."></textarea>
-					<button type="submit">Envoyer</button>
-				</form>
 			</div>
 		</section>
 	</main>
+	
 
 	<footer>
 		<p>&copy; 2025 Projet SAE 2.03 – Tous droits réservés</p>
