--- a/sae2.03/serveur.html
+++ b/sae2.03/serveur.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF‑8">
 	<meta name="viewport" content="width=device‑width,initial‑scale=1.0">
-	<title>Installation</title>
+	<title>Fonctionnement côté Serveur (server.js)</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -15,10 +15,11 @@
 	<!-- 2) Nav identique partout -->
 	<nav class="glass-nav">
 		<ul>
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="technique.html">Choix Techniques</a></li>
-			<li><a href="installation.html">Installation</a></li>
-			<li><a href="equipe.html">Équipe</a></li>
+			<li><a href="index.html">Présentation générale</a></li>
+			<li><a href="serveur.html">Fonctionnement côté Serveur (server.js)</a></li>
+			<li><a href="client.html">Fonctionnement côté Client (snake.js + index.html)</a></li>
+			<li><a href="deploiement.html">Déploiement et Fonctionnement Docker</a></li>
+			<li><a href="equipe.html">Notre équipe</a></li>
 		</ul>
 	</nav>
 
