--- a/sae2.03/equipe.html
+++ b/sae2.03/equipe.html
@@ -5,20 +5,21 @@
 	<meta charset="UTF-8">
 	<title>Équipe</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
 	<div class="cursor"></div>
 
 	<nav class="glass-nav">
-		<ul>
-			<li><a href="index.html">Présentation générale</a></li>
-			<li><a href="serveur.html">Fonctionnement côté Serveur (server.js)</a></li>
-			<li><a href="client.html">Fonctionnement côté Client (snake.js + index.html)</a></li>
-			<li><a href="deploiement.html">Déploiement et Fonctionnement Docker</a></li>
-			<li><a href="equipe.html">Notre équipe</a></li>
-		</ul>
-	</nav>
+        <ul>
+            <li><a href="index.html"><i class="fas fa-home"></i> Présentation générale</a></li>
+            <li><a href="serveur.html"><i class="fas fa-server"></i> Fonctionnement côté Serveur</a></li>
+            <li><a href="client.html"><i class="fas fa-code"></i> Fonctionnement côté Client</a></li>
+            <li><a href="deploiement.html"><i class="fas fa-docker"></i> Déploiement Docker</a></li>
+            <li><a href="equipe.html"><i class="fas fa-users"></i> Notre équipe</a></li>
+        </ul>
+    </nav>
 	
 	<main>
 		<section class="content-section">
