--- a/sae2.03/equipe.html
+++ b/sae2.03/equipe.html
@@ -68,7 +68,7 @@
 	
 
 	<footer>
-		<p>&copy; 2025 Projet SAE 2.03 – Tous droits réservés</p>
+		<p><strong>&copy; 2025 Projet SAE 2.03 - Snake Multijoueur</strong> – Tous droits réservés</p>
 	</footer>
 
 	<script src="js/script.js"></script>
