--- a/sae2.03/client.html
+++ b/sae2.03/client.html
@@ -57,7 +57,7 @@
 						<li>Utilisation d'un canvas HTML5 de 800x800 pixels</li>
 						<li>Chaque case mesure 40x40 pixels</li>
 						<li>Serpents colorés : 
-							<ul>
+							<ul class="play-steps">
 								<li>Vert pour Joueur 1, Bleu pour Joueur 2</li>
 								<li>La tête est plus foncée pour la distinguer</li>
 							</ul>
