--- a/sae2.03/deploiement.html
+++ b/sae2.03/deploiement.html
@@ -10,10 +10,8 @@
 </head>
 
 <body>
-	<!-- 1) On place le DIV du curseur immuablement -->
 	<div class="cursor"></div>
 
-	<!-- 2) Nav identique partout -->
     <nav class="glass-nav">
         <ul>
             <li><a href="index.html"><i class="fas fa-home"></i> Présentation générale</a></li>
@@ -23,8 +21,7 @@
             <li><a href="equipe.html"><i class="fas fa-users"></i> Notre équipe</a></li>
         </ul>
     </nav>
-
-	<!-- 3) Contenu spécifique -->
+	
 	<main>
 		<section class="content-section">
 			<div class="card">
@@ -47,9 +44,9 @@
     ├── index.html
     ├── snake.js
     ├── style.css
-    ├── server.js
-    ├── Dockerfile
-    ├── package.json</pre></code>
+server.js
+Dockerfile
+package.json</pre></code>
 				</div>
 				
 				<div div class="context-section">
@@ -104,12 +101,10 @@ docker run -d -p 8023:8023 snake-multi</pre></code>
 		</section>
 	</main>
 
-	<!-- 4) Footer identique -->
 	<footer>
 		<p><strong>&copy; 2025 Projet SAE 2.03 - Snake Multijoueur</strong> – Tous droits réservés</p>
 	</footer>
-
-	<!-- 5) Toujours en dernier -->
+	
 	<script src="js/script.js"></script>
 </body>
 </html>
